# devrecall

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  go.mod  go.sum
.github/workflows/: ci.yml  release.yml
cmd/devrecall/: brag_test.go  log_test.go  main.go  mandatory_check_test.go  mcp.go  prune_test.go  search_test.go  standup_test.go  status_test.go  timeline_test.go  wizard.go  wizard_test.go
desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src/: App.svelte  app.css  design.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: .gitignore
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: hotkey.rs  main.rs  notifications.rs  server.rs  tray.rs
internal/agent/: loop.go  loop_test.go  stream.go  stream_test.go
internal/api/: chat_stream.go  chat_stream_test.go  freshness.go  llm_health.go  server.go  server_test.go  sync_sources.go  sync_stream.go  sync_stream_test.go
internal/auth/: bitbucket_auth.go  bitbucket_auth_test.go  github_oauth.go  github_oauth_test.go  gitlab_auth.go  gitlab_auth_test.go  google_oauth.go  google_oauth_test.go  jira_oauth.go  jira_oauth_test.go  keychain.go  keychain_os.go  keychain_os_test.go  keychain_test.go  linear_oauth.go  linear_oauth_test.go  oauth.go  oauth_test.go
internal/chat/: chat.go  chat_test.go
internal/collector/: collector.go
internal/config/: config.go  config_test.go
internal/daemon/: daemon.go  daemon_test.go
internal/embedding/: embedder.go  embedder_test.go  factory.go  ollama.go  onnx.go  onnx_test.go  openai.go
internal/enrich/: enrich.go  enrich_test.go
internal/identity/: resolver.go  resolver_test.go
internal/llm/: anthropic.go  factory.go  factory_test.go  jsonutil.go  ollama.go  openai.go  provider.go  provider_test.go  tools.go  tools_test.go
internal/mcp/: prompts.go  protocol.go  (+3 more)
packaging/: nfpm.yaml  packaging_test.go
relay/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
(+149 files in other folders)
